--- a/sketches/data (digitized)/resetar2008.Rmd
+++ b/sketches/data (digitized)/resetar2008.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(fig.retina = 2.5)
 options(width = 110)
 ```
 
-The purpose of this file is to make a data set resembling those in Resetar & Noell (2008; https://doi.org/10.1901/jaba.2008.41-447). In the `Resetar & Noell (2008).Rmd` file, we digitized the data which Resetar and Noell displayed in their Figure 1 (p. 450) and saved the results in a series of `.csv` files. Here we'll collect those files and wrangle the data into a useful format.
+The purpose of this file is to make a data set resembling those in Resetar & Noell (2008; https://doi.org/10.1901/jaba.2008.41-447). In the `Digitize Resetar & Noell (2008).Rmd` file, we digitized the data which Resetar and Noell displayed in their Figure 1 (p. 450) and saved the results in a series of `.csv` files. Here we'll collect those files and wrangle the data into a useful format.
 
 Load the **tidyverse**.
 
