--- a/sketches/Sarafoglou et al (2023).qmd
+++ b/sketches/Sarafoglou et al (2023).qmd
@@ -262,8 +262,7 @@ p1 <- as_draws_df(fit0) %>%
   geom_vline(xintercept = mean(sarafoglou2023$deviation_count),
              linetype = 2, color = "blue") +
   scale_x_continuous(expression(E(italic(y))), limits = c(0, NA)) +
-  scale_y_continuous(NULL, breaks = NULL) +
-  theme(panel.grid = element_blank())
+  scale_y_continuous(NULL, breaks = NULL)
 
 # variance
 p2 <- as_draws_df(fit0) %>% 
@@ -277,8 +276,7 @@ p2 <- as_draws_df(fit0) %>%
   geom_vline(xintercept = var(sarafoglou2023$deviation_count),
              linetype = 2, color = "blue") +
   scale_x_continuous(expression(Var(italic(y))), limits = c(0, 1.3)) +
-  scale_y_continuous(NULL, breaks = NULL) +
-  theme(panel.grid = element_blank())
+  scale_y_continuous(NULL, breaks = NULL)
 
 
 # proportion 0
@@ -292,8 +290,7 @@ p3 <- as_draws_df(fit0) %>%
   geom_vline(xintercept = mean(sarafoglou2023$deviation_count == 0),
              linetype = 2, color = "blue") +
   scale_x_continuous(expression(Pr(italic(y)==0)), limits = c(0, 1)) +
-  scale_y_continuous(NULL, breaks = NULL) +
-  theme(panel.grid = element_blank())
+  scale_y_continuous(NULL, breaks = NULL)
 
 # combine and display
 p1 + p2 + p3 +
@@ -609,8 +606,7 @@ bind_rows(
        y = "count") +
   theme(legend.background = element_blank(),
         legend.key.size = unit(0.13, 'in'),
-        legend.position = c(.85, .85),
-        panel.grid = element_blank()) +
+        legend.position = c(.85, .85)) +
   facet_wrap(~ group)
 ```
 
@@ -658,8 +654,7 @@ bind_rows(p1$data, p2$data, p3$data,
        subtitle = "Gray bars in the background show the observed counts.\nColored point intervals in the foreground show the models' posterior-predictive counts.",
        y = "count") +
   coord_flip() +
-  theme(panel.grid = element_blank(),
-        legend.position = "none") +
+  theme(legend.position = "none") +
   facet_wrap(~ group)
 ```
 
@@ -710,8 +705,7 @@ tau_ate %>%
   scale_x_continuous(expand = expansion(mult = 0.3)) +
   labs(x = expression(tau[ATE]),
        y = NULL) +
-  theme(axis.text.y = element_text(hjust = 0),
-        panel.grid = element_blank())
+  theme(axis.text.y = element_text(hjust = 0))
 ```
 
 Overall, they're all very similar.
@@ -861,8 +855,7 @@ v %>%
   labs(title = expression(Group~variances~computed~with~lambda(1-pi)(1+pi*lambda)),
        x = expression(tau[Var]),
        y = NULL) +
-  theme(axis.text.y = element_text(hjust = 0),
-        panel.grid = element_blank())
+  theme(axis.text.y = element_text(hjust = 0))
 ```
 
 The Poisson models are very confident about the variance differences. The ZIP model are less so.
@@ -928,8 +921,7 @@ z %>%
   labs(title = expression(Group~proportions~computed~with~pi+(1-pi)*exp(-lambda)),
        x = expression(tau[Pr(italic(Y)==0)]),
        y = NULL) +
-  theme(axis.text.y = element_text(hjust = 0),
-        panel.grid = element_blank())
+  theme(axis.text.y = element_text(hjust = 0))
 ```
 
 Interestingly, this time the simple ZIP models differ from the other kinds of models. In all cases, it appears we should expect more zero's for the analysis blinding group, though there's considerable uncertainty about the magnitude of the difference.
