--- a/sketches/Sarafoglou et al (2023) rnb.Rmd
+++ b/sketches/Sarafoglou et al (2023) rnb.Rmd
@@ -822,7 +822,7 @@ v <- lambda_pi %>%
 print(v)
 ```
 
-Now these summaries are the causal effects for the differences in variances for `deviation_count`, expressed as $\text{\mathbb{E}}\left[\mathbb{Var}(y_i^1) - \mathbb{Var}(y_i^0) \mid \mathbf C_i \right]$. You'll note that because they are both conventional Poisson models, the results for `fit1` and `fit4` are identical, here, to those from the last section where we considered $\hat \tau_\text{ATE}$ because, with the Poisson, the mean is the same as the variance. For the ZIP models, the results differ.
+Now these summaries are the causal effects for the differences in variances for `deviation_count`, expressed as $\mathbb{E}\left[\mathbb{Var}(y_i^1) - \mathbb{Var}(y_i^0) \mid \mathbf C_i \right]$. You'll note that because they are both conventional Poisson models, the results for `fit1` and `fit4` are identical, here, to those from the last section where we considered $\hat \tau_\text{ATE}$ because, with the Poisson, the mean is the same as the variance. For the ZIP models, the results differ.
 
 Here we compute and save the sample difference in variances.
 
@@ -932,10 +932,22 @@ The ZIP model a fine strategy to have at your disposal when you have a lot of ze
 Do note that similar to the ZIP, the parameters in these three alternative models have complex relations with the population mean and variance. You can compute the means for each model with the following formulas:
 
 $$
+\mathbb {E}(y_i)_\text{ZINB} = \mu (1 - \pi)
+$$
+
+$$
+\mathbb {E}(y_i)_\text{HP} = \mu\frac{1 - \pi}{1 - \exp(-\mu)}
+$$
+
+$$
+\mathbb {E}(y_i)_\text{HNB} = \mu (1 - \pi) \left [1 - \left ( \frac{\phi}{\mu + \phi} \right )^\phi \right ]^{-1},
+$$
+
+$$
 \begin{align*}
-\mathbb E(y_i)_\text{ZINB} & = \mu (1 - \pi) \\
-\mathbb E(y_i)_\text{HP}   & = \mu\frac{1 - \pi}{1 - \exp(-\mu)} \\
-\mathbb E(y_i)_\text{HNB} & = \mu (1 - \pi) \left [1 - \left ( \frac{\phi}{\mu + \phi} \right )^\phi \right ]^{-1},
+\mathbb {E}(y_i)_\text{ZINB} & = \mu (1 - \pi) \\
+\mathbb {E}(y_i)_\text{HP}   & = \mu\frac{1 - \pi}{1 - \exp(-\mu)} \\
+\mathbb {E}(y_i)_\text{HNB} & = \mu (1 - \pi) \left [1 - \left ( \frac{\phi}{\mu + \phi} \right )^\phi \right ]^{-1},
 \end{align*}
 $$
 
